# conan-private-linking

app/: CMakeLists.txt  conanfile.py
app/include/: app.h  libB.h
app/src/: CMakeLists.txt
app/src/app/: CMakeLists.txt  app.cpp
app/src/libB/: CMakeLists.txt  libB.cpp
libA/: CMakeLists.txt  conanfile.py
libA/include/: libA.h
libA/src/: libA.cpp
libX/: CMakeLists.txt  conanfile.py
libX/include/: libX.h
libX/src/: libX.cpp
libY/: CMakeLists.txt  conanfile.py
libY/include/: libY.h
libY/src/: libY.cpp
